force-app/main/default/objects/ProductStandard__c/ProductStandard__c.object-meta.xml
<CustomObject>
    <description>Technical standard that defines product characteristics</description>
    <label>Product Standard</label>
    <nameField>
        <label>Product Standard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Standards</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>