force-app/main/default/objects/ProductStandard__c/fields/ERP_FacetCode__c.field-meta.xml
<CustomField>
    <fullName>ERP_FacetCode__c</fullName>
    <label>ERP_FacetCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>