force-app/main/default/objects/ProductStandard__c/fields/ERP_FacetGroup__c.field-meta.xml
<CustomField>
    <fullName>ERP_FacetGroup__c</fullName>
    <label>ERP_FacetGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERPFacetGroup</valueSetName>
    </valueSet>
</CustomField>