force-app/main/default/objects/ProductStandard__c/fields/ERP_StdName__c.field-meta.xml
<CustomField>
    <fullName>ERP_StdName__c</fullName>
    <label>ERP_StdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>