force-app/main/default/objects/ProductStandard__c/fields/FacetValue__c.field-meta.xml
<CustomField>
    <fullName>FacetValue__c</fullName>
    <label>FacetValue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>