force-app/main/default/objects/ProductStandard__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Product standard full name</description>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>