force-app/main/default/objects/ProductStandard__c/fields/FullName_UA__c.field-meta.xml
<CustomField>
    <fullName>FullName_UA__c</fullName>
    <description>Product Standard full name in Ukranian</description>
    <label>FullName_UA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>