force-app/main/default/objects/ProductStandard__c/fields/GeneralProductStandard__c.field-meta.xml
<CustomField>
    <fullName>GeneralProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Product Standard</label>
    <referenceTo>GeneralProductStandard__c</referenceTo>
    <relationshipLabel>Product Standards</relationshipLabel>
    <relationshipName>Product_Standards</relationshipName>
    <type>Lookup</type>
</CustomField>