force-app/main/default/objects/ProductStandard__c/fields/IsSecondChoice__c.field-meta.xml
<CustomField>
    <fullName>IsSecondChoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Choice</label>
    <type>Checkbox</type>
</CustomField>