force-app/main/default/objects/ProductStandard__c/fields/Obsolete__c.field-meta.xml
<CustomField>
    <fullName>Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the record is obsolete (not in use anymore).</description>
    <inlineHelpText>Whether the record is obsolete (not in use anymore).</inlineHelpText>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>