force-app/main/default/objects/ProductStandard__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Type of product.</description>
    <inlineHelpText>Type of product.</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tube</fullName>
            </value>
            <value>
                <fullName>Wheel</fullName>
            </value>
            <value>
                <fullName>Wheel set</fullName>
            </value>
            <value>
                <fullName>Coupling</fullName>
            </value>
            <value>
                <fullName>Axle</fullName>
            </value>
            <value>
                <fullName>Billet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>