force-app/main/default/objects/ProductStandard__c/fields/StrLen__c.field-meta.xml
<CustomField>
    <fullName>StrLen__c</fullName>
    <formula>LEN(FullName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StrLen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>