force-app/main/default/objects/ProductStandard__c/listViews/Standards_PIPES.listView-meta.xml
<ListView>
    <fullName>Standards_PIPES</fullName>
    <columns>NAME</columns>
    <columns>FullName__c</columns>
    <columns>FullName_UA__c</columns>
    <columns>GeneralProductStandard__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>ProductType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>Tube</value>
    </filters>
    <label>Standards PIPES</label>
</ListView>